:fire: wip: add namespace support
[skip ci]
